--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,6 @@
     <link rel="icon" href="/icon.png" type="image/png">
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
-    // Simple CSS CDN
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple-v1.css">
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
@@ -21,6 +20,9 @@
   </head>
 
   <body>
+
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
